  - Fixed skyscrapers not appearing on the map
  - Fixed Canard wingform giving 60% radar advantage instead of 6%
  - Fixed the Energy Use modifier not properly working as intended causing very disparging numbers using game rules/"All Power Sources Energy Use" modifier
  - Fixed an issue with Tajikistan not coring Badakhshan after the Badakhshan decisions were completed successfully

v1.11.2

 Achievements:
  - Fixed a Czech ribbon not following the standards for the difficulty

 AI:
  - Reworked how AI manages its spending - now mainly based on expected spending
  - Reworked how AI manager its taxes - now uses simplified and more rigid model for more predictable results
  - Adjusted the AI for the United Kingdom, Italy, France to not immediately intervene in Afghanistan as soon as there is WT and instead focus there when they support the US or if it's past 2002.6.1
  - Enabled proper AI for the counter terror international system UI
  - AI should stop being silly and trying to invest infrastructure in states with 5 infrastructure
  - Added new gamerule - God Of War - allowing AI to use more meta templates and focus on player more
  - AI will be less likely to conduct a Special Forces raid if you are not on the same continent, and they are not stronger than you
  - Made AI more motivated to build rifles
  - hardlocking italian ai from causing civil wars due to mismanagement when historical focus is on
  - Added FIN/SWE fully to the historical nato path after 2023
  - European Union AI should be more likely to push for expansion if any of the superpowers cause world tension (unify Europe against the others!)
  - European Union members who are in NATO are more likely to accept fellow EU members into NATO

 Balance:
  - Reworked the math of the internal faction decision "Taxing Religious Institutions" so the money amount isn't that high
  - Lower stability will now directly impact the productivity growth of a nation (up to -25% at 0% stability)