@@ -1559,28 +1559,20 @@ on_actions = {
 			round_variable = SPR_legion_cap
 
 			if = { limit = { has_completed_focus = SPR_sector_servicios_espanol }
-				if = { limit = { has_war = yes }
-					set_variable = { SPR_tourism_1_effect = 0 }
-					set_variable = { SPR_tourism_2_effect = 0 }
-					set_variable = { SPR_tourism_3_effect = 0 }
-				}
-				else = {
+				if = {
+					limit = {
+						has_war = no
+						has_stability > 0.5
+					}
 					set_variable = { SPR_tourism_1_effect = 0.4 }
 					set_variable = { SPR_tourism_2_effect = 0.8 }
 					set_variable = { SPR_tourism_3_effect = 1.2 }
 				}
-
-				if = { limit = { has_stability < 0.5 }
+				else = {
 					set_variable = { SPR_tourism_1_effect = 0 }
 					set_variable = { SPR_tourism_2_effect = 0 }
 					set_variable = { SPR_tourism_3_effect = 0 }
 				}
-				else = {
-					set_variable = { SPR_tourism_1_effect = 0.4 }
-					set_variable = { SPR_tourism_2_effect = 0.8 }
-					set_variable = { SPR_tourism_3_effect = 1.2 }
-				}
-
 			}
 		}
 	}
