@@ -1286,7 +1286,7 @@ calculate_additional_income_rate = {
 		}
 		if = {
 			limit = { has_idea = SPR_idea_tourist_industry_3 }
-			add_to_variable = { additional_income_rate = SPR_tourism_2_effect }
+			add_to_variable = { additional_income_rate = SPR_tourism_3_effect }
 		}
 	}
 	# France
