@@ -2511,13 +2511,13 @@
  leverage_sacra_corona_unita_infighting_desc: "Big mafia organizations such as \" §2Cosa Nostra§!\" or \"§0Camorra§!\" are actually composed of a myriad of smaller clans that often rival each other. By pulling the right levers we can break the delicate inner peace under which they operate."
  mafia_strength_reduction_over_time_TT: "This measure will reduce §tMafia§! strength over time."
  attack_hideouts_sicily: "Attack  §2Cosa Nostra§! Hideouts"
- attack_hideouts_sicily_desc: "Thanks to our undercover agents we have gathered enough information and we are now able to make targeted strikes against key mafia hideouts throughout the country. §YThis decision can be taken only if a sufficent number of agents have infiltrated clans.§!"
+ attack_hideouts_sicily_desc: "Thanks to our undercover agents we have gathered enough information and we are now able to make targeted strikes against key mafia hideouts throughout the country. §YThis decision can be taken only if a sufficent number of agents have infiltrated clans and strength is below 0.25.§!"
  attack_hideouts_campania: "Attack §0Camorra§! Hideouts"
- attack_hideouts_campania_desc: "Thanks to our undercover agents we have gathered enough information and we are now able to make targeted strikes against key mafia hideouts throughout the country. §YThis decision can be taken only if a sufficent number of agents have infiltrated clans.§!"
+ attack_hideouts_campania_desc: "Thanks to our undercover agents we have gathered enough information and we are now able to make targeted strikes against key mafia hideouts throughout the country. §YThis decision can be taken only if a sufficent number of agents have infiltrated clans and strength is below 0.25.§!"
  attack_hideouts_calabria: "Attack §7'Ndrangheta§! Hideouts"
- attack_hideouts_calabria_desc: "Thanks to our undercover agents we have gathered enough information and we are now able to make targeted strikes against key mafia hideouts throughout the country. §YThis decision can be taken only if a sufficent number of agents have infiltrated clans.§!"
+ attack_hideouts_calabria_desc: "Thanks to our undercover agents we have gathered enough information and we are now able to make targeted strikes against key mafia hideouts throughout the country. §YThis decision can be taken only if a sufficent number of agents have infiltrated clans and strength is below 0.25.§!"
  attack_hideouts_puglia: "Attack §9Sacra Corona Unita§! Hideouts"
- attack_hideouts_puglia_desc: "Thanks to our undercover agents we have gathered enough information and we are now able to make targeted strikes against key mafia hideouts throughout the country. §YThis decision can be taken only if a sufficent number of agents have infiltrated clans.§!"
+ attack_hideouts_puglia_desc: "Thanks to our undercover agents we have gathered enough information and we are now able to make targeted strikes against key mafia hideouts throughout the country. §YThis decision can be taken only if a sufficent number of agents have infiltrated clans and strength is below 0.25.§!"
  army_in_the_streets: "Deploy the Army"
  army_in_the_streets_desc: "It's time to use the hard way and root out the criminals once and for all."
  encourage_fighting_between_families: "Encourage fighting between §tMafia§! clans"
