@@ -5,6 +5,9 @@ v1.11.2a
   - Fixed Canard wingform giving 60% radar advantage instead of 6%
   - Fixed the Energy Use modifier not properly working as intended causing very disparging numbers using game rules/"All Power Sources Energy Use" modifier
   - Fixed an issue with Tajikistan not coring Badakhshan after the Badakhshan decisions were completed successfully
+  - Fixed "Spanish Tourism Industry" ideas giving the wrong amount of money once you are on the third layer of money
+  - Fixed the "Spanish Tourism Industry" ideas incorrectly allowing you to bypass the reason to get the money by having over 50% stability despite being at war
+  - Fixed Italian Mafia decisions not properly informing the player that the strength of a clan needs to be below 0.25 to be raided
 
 v1.11.2
 
